--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "framer-motion": "^12.23.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
